--- a/2º Trabalho/segundo_trabalho.bib
+++ b/2º Trabalho/segundo_trabalho.bib
@@ -87,7 +87,7 @@
     author = "Stephanie Glen",
     title = "EM Algorithm (Expectation-maximization): Simple Definition",
     url  = "https://www.statisticshowto.com/em-algorithm-expectation-maximization/",
-    addendum = "(accessedo: 11.09.2020)"
+    addendum = "(acessado: 11.09.2020)"
 }
 
 @article{IRT,
