--- a/3º Trabalho/terceiro_trabalho.bib
+++ b/3º Trabalho/terceiro_trabalho.bib
@@ -18,6 +18,20 @@
 
 @online{stackexchange,
     title = "What's in a name: Precision (inverse of variance)",
-    url  = "https://stats.stackexchange.com/questions/211419/whats-in-a-name-precision-inverse-of-variance",
+    url = "https://stats.stackexchange.com/questions/211419/whats-in-a-name-precision-inverse-of-variance",
     addendum = "(acessado: 30.09.2020)"
+}
+
+@online{ehlers,
+    title = "Inferência Bayesian (Notas de Aula)",
+    author = "Ricardo Ehlers",
+    url = "https://sites.icmc.usp.br/ehlers/bayes/",
+    addendum = "(acessado: 02.10.2020)"
+}
+
+@online{ehlers2,
+    title = "Introdução a Inferência Bayesian",
+    author = "Ricardo S. Ehlers",
+    url = "http://www.leg.ufpr.br/~paulojus/CE227/ce227/",
+    addendum = "(acessado: 03.10.2020)"
 }
