consertei o título da referência

--- a/3º Trabalho/terceiro_trabalho.bib
+++ b/3º Trabalho/terceiro_trabalho.bib
@@ -23,14 +23,14 @@
 }
 
 @online{ehlers,
-    title = "Inferência Bayesian (Notas de Aula)",
+    title = "Inferência Bayesiana (Notas de Aula)",
     author = "Ricardo Ehlers",
     url = "https://sites.icmc.usp.br/ehlers/bayes/",
     addendum = "(acessado: 02.10.2020)"
 }
 
 @online{ehlers2,
-    title = "Introdução a Inferência Bayesian",
+    title = "Introdução a Inferência Bayesiana",
     author = "Ricardo S. Ehlers",
     url = "http://www.leg.ufpr.br/~paulojus/CE227/ce227/",
     addendum = "(acessado: 03.10.2020)"
