--- a/3º Trabalho/3º Trabalho.tex
+++ b/3º Trabalho/3º Trabalho.tex
@@ -18,6 +18,11 @@
 \usepackage{xcolor}
 \pgfplotsset{compat = 1.16}
 \pgfmathdeclarefunction{gauss}{2}{\pgfmathparse{1/(#2*sqrt(2*pi))*exp(-((x-#1)^2)/(2*#2^2))}}
+\pgfmathdeclarefunction{gamma}{1}{\pgfmathparse{2.506628274631*sqrt(1/#1)+0.20888568*(1/#1)^(1.5)+
+    0.00870357*(1/#1)^(2.5)-(174.2106599*(1/#1)^(3.5))/25920-
+    (715.6423511*(1/#1)^(4.5))/1244160)*exp((-ln(1/#1)-1)*#1)}}
+\pgfmathdeclarefunction{studentpost}{1}{\pgfmathparse{gamma((#1+1)/2)/(sqrt(#1*pi)*gamma(#1/2))*((1+((x-9.251579)*(x-9.251579))/#1)^(-(#1+1)/2))}}
+\pgfmathdeclarefunction{studentprio}{1}{\pgfmathparse{gamma((#1+1)/2)/(sqrt(#1*pi)*gamma(#1/2))*((1+((x-10)*(x-10))/#1)^(-(#1+1)/2))}}
 
 \newtheorem{definition}{Definição}
 \newtheorem{theorem}{Teorema}
@@ -328,8 +333,29 @@ Assim, utilizando tabelas da distribuição $t$ de Student, podemos ver que o lo
 
 Logo, $a = 7.909581$ e $b = 10.59358$.
 
+Graficamente, temos as seguintes distribuições $\mu$
 
-
+\begin{figure}[H]
+    \begin{tikzpicture}
+        \begin{axis}[no markers, domain = 0:18, samples = 300, height = 10 cm, width = 16 cm, enlargelimits = upper, axis on top]
+            \addplot [domain = 10.59358:18, draw = black, samples = 100] {studentpost(14)} \closedcycle;
+            \addplot [domain = 0:7.9095811, draw = black, samples = 100] {studentpost(14)} \closedcycle;
+            \addplot [domain = 7.9095811:10.59358, draw = black, samples = 100] {studentpost(14)} \closedcycle;
+            \addplot [draw = blue] {studentpost(14)}
+            node [pos=0.45, anchor=mid east, xshift=-2em,
+            append after command={
+                (\tikzlastnode.east) edge [thin, gray] +(2em,0)}]
+            {Posteriori};
+            \addplot [draw = cyan] {studentprio(4)}
+            node [pos=0.55, anchor=mid west, xshift=2em,
+            append after command={
+                (\tikzlastnode.west) edge [thin, gray] +(-2em,0)}]
+            {Priori};
+            \addplot [domain = 7.9095811:10.59358, draw = red, samples = 2, line width=0.1cm] {0}
+            node [pos=0.55, anchor=north, yshift=2em] {I.C.};
+        \end{axis}
+    \end{tikzpicture}
+\end{figure}
 
 
 % \section*{Conclusão}
